--- a/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
+++ b/LaTeX/Projektdokumtation/Accepttest/UCT9.tex
@@ -8,7 +8,7 @@
 \multicolumn{5}{|l|}{\textbf{Scenarie:} Hovedscenarie} \\\hline
 \multicolumn{5}{|p{0.97\linewidth}|}{\textbf{Prækondition:} Der er forbindelse til \glossary{CS}, Testkategori 1 og Testkategori 2 eksisterer i systemet og Testprodukt 1 er oprettet og placeret i Testkategori 1} \\\hline
 Step & Handling & Forventet resultat & Observation & Vurdering (OK/fejl) \\\hline
-1 & \gls{SB} vælger Testkategori 1 i kategorilisten & Testkategori 1 markeres. & Markeres & OK \\\hline
+1 & \gls{SB} vælger "Testkategori 1" i kategorilisten & Testkategori 1 markeres. & Markeres & OK \\\hline
 2 & \gls{SB} trykker på knappen til Slet Kategori & En dialogboks åbnes der informerer \gls{SB} om at der er produkter i kategorien, og \gls{SB} kan vælge en anden kategori de skal flyttes til. & Vindue åbner, der bliver ikke informeret om at der er produkter, men sletknappen er grå, og eneste mulighed er at trykke flyt eller annuller & OK\\\hline
 3 & \gls{SB} Vælger testkategori 2 og trykker på flyt & Efter kort tid bliver knappen slet synlig & Knappen blev synlig, dog først efter aktiv tryk på gui med musemarkør & EJ OK \\\hline
 5 & \gls{SB} Trykker på slet & Vinduet lukker & Vinduet lukker & OK\\\hline
