--- a/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/SharedLib/Commands.tex
@@ -1,5 +1,5 @@
 \subsection{Commands}\label{COMMAND}
-Fælles for alle systemerne i dette projekt er at de kommunikere ved hjælp af kommandoer. For at gøre denne kommunikationen lettere blev der oprettet en Command klasse der i sig selv blot har en attribut med et kommando navn, dette betyder at når der arbejdes med kommander, så kan man ved hjælp af Command klassens navn caste til den korrekte implementering af denne kommando.
+Fælles for alle systemerne i dette projekt er at de kommunikere ved hjælp af kommandoer. 
 
 Der skelnes imellem tre typer af kommandoer:
 
