--- a/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/ViewModels.tex
+++ b/LaTeX/Projektdokumtation/Systemdesign/Frontend/GUI/ViewModels.tex
@@ -22,7 +22,7 @@ CategoriesMenu er en menu med categorier. Denne klasse står for at kende alle k
 	\label{fig:PBC}
 \end{figure}
 
-\textbf{MenuCategory}
+\textbf{MenuCategory}\\
 MenuCategory er en kategory i menuen. Den arver fra MenuItem som er et WPF element. Ved at oprette klassen på denne måde er det muligt at styre klassen direkte fra code behind. Derved kan der tilknyttes commands, og det muliggør dynamisk oprettelse af MenuItems.
 
 
