--- a/LaTeX/Projektrapport/Forside/Forside.tex
+++ b/LaTeX/Projektrapport/Forside/Forside.tex
@@ -9,15 +9,15 @@
 \parbox[b]{0.70\textwidth}{
 \vbox{%
 {\noindent\HUGE\bfseries Salgssystem}\\[2\baselineskip]
-{\noindent\huge\bfseries Projektdokumentation\\[0.5\baselineskip]}
+{\noindent\huge\bfseries Projektrapport\\[0.5\baselineskip]}
 {\Large\itshape Aarhus Universitet}\\[.37\baselineskip]
 {\Large Gruppe 3 - 4. Semester - E15}\\[.37\baselineskip]
 {\Large XX. dec 2015}\\[3.5\baselineskip]
-\itab{\normalsize Kasper Klausen}\tab {\normalsize 0000000}\par
-\itab{\normalsize Benjamin Larsen}\tab {\normalsize 0000000}\par
-\itab{\normalsize Dennis Tychsen}\tab {\normalsize 0000000}\par
-\itab{\normalsize Martin Carpentier}\tab {\normalsize 0000000}\par
-\itab{\normalsize Jakob Kristensen}\tab {\normalsize 0000000}\par
+\itab{\normalsize Kasper Klausen}\tab {\normalsize 201303660}\par
+\itab{\normalsize Benjamin Larsen}\tab {\normalsize 201303646}\par
+\itab{\normalsize Dennis Tychsen}\tab {\normalsize 201311503}\par
+\itab{\normalsize Martin Carpentier}\tab {\normalsize 201370292}\par
+\itab{\normalsize Jakob Kristensen}\tab {\normalsize 201270250}\par
 \itab{\normalsize Andreas Engelbrecht}\tab {\normalsize 0000000}\par
 \vspace{0.1\textheight}
 \includegraphics[width=0.7\textwidth]{Forside/RigtBillede2}
