--- a/LaTeX/Projektdokumtation/Forside/Underskrift.tex
+++ b/LaTeX/Projektdokumtation/Forside/Underskrift.tex
@@ -5,15 +5,15 @@
 
 \noindent\begin{tabular}{ll}
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
-Kasper Klausen | 201303660 & Dato\\[12ex]% adds space between the two sets of signatures
+Kasper Klausen | 201303660 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
 Benjamin Larsen | 201303646 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
-Dennis Tychsen | x & Dato\\[12ex]
+Dennis Tychsen | 201311503 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
 Martin Carpentier | 201370292 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
-Jakob Kristensen | x & Dato\\[12ex]
+Jakob Kristensen | 201270250 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
 Andreas Engelbrecht | x & Dato\\[12ex]
 
