--- a/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
@@ -1,1 +1,52 @@
 \section{Aktørbeskrivelse}
+
+I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet. \\
+
+\begin{table}[H]
+	\label{EKS}
+	\begin{tabularx}{\textwidth}{|l|X|}
+		\hline
+		\textbf{Navn} & Ekspedient \\
+		\hline
+		\textbf{Type} & Primær \\
+		\hline
+		\textbf{Beskrivelse} & Ekspedient er en primær bruger af systemet, som benytter systemet til at sælge og returnere vare. \\
+		\hline
+	\end{tabularx}
+	\captionsetup{justification=raggedright,singlelinecheck=false}
+	\caption{Aktør beskrivelse af Ekspedient}
+	\label{tab:AktEks}
+\end{table}
+
+
+\begin{table}[H]
+	\begin{tabularx}{\textwidth}{|l|X|}
+		\hline
+		\textbf{Navn} & Super User \\
+		\hline
+		\textbf{Type} & Primær \\
+		\hline
+		\textbf{Beskrivelse} & Superbruger er en primær bruger af systemet, som benytter systemet til at oprette, nedlægge og redigere i systemets varekatalog. \\
+		\hline
+	\end{tabularx}
+	\captionsetup{justification=raggedright,singlelinecheck=false}
+	\caption{Aktør beskrivelse af Superbruger}
+	\label{tab:AktSuu}
+\end{table}
+
+\begin{table}[H]
+	\label{KD}
+	\begin{tabularx}{\textwidth}{|l|X|}
+		\hline
+		\textbf{Navn} & Kunde \\
+		\hline
+		\textbf{Type} & Sekundær \\
+		\hline
+		\textbf{Beskrivelse} & Kunden er en sekundær bruger af systemet, og ønsker at købe/returnere en eller flere varer igennem Ekspedienten. Ekspedienten er beskrevet i tabel \ref{EKS}.   \\
+		\hline
+	\end{tabularx}
+	\captionsetup{justification=raggedright,singlelinecheck=false}
+	\caption{Aktør beskrivelse af kunden}
+	\label{tab:AktKu}
+\end{table}
+
