--- a/LaTeX/Projektrapport/Krav/UCbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/UCbeskrivelse.tex
@@ -1,1 +1,3 @@
-\section{Use Case Beskrivelser}
+\section{Use Case beskrivelser}
+I det følgende afsnit kan der læses om de use cases der findes i systemet. Ønskes der yderligere specifikationer om disse usecases, henvises der til dokumentationen, afsnit 1.5. 
+
