--- a/LaTeX/Projektrapport/Krav/Krav.tex
+++ b/LaTeX/Projektrapport/Krav/Krav.tex
@@ -1,4 +1,5 @@
 \chapter{Krav}
-
+I det følgende afsnit er der beskrevet om de use cases der har været udarbejdet ifbm. udviklingen af systemet. Use casene beskriver de anvendelsesmuligheder som brugerne af systemet har som hhv. Superbruger og Ekspedient.\\
+Disse use cases bliver anvendt som kravsspecifikation for systemet, da de viser de reelle anvendelsesmuligheder der findes. Ønskes yderligere specifikationer om disse use cases, henvises til dokumentationen, kapitel 1.
 \input{Krav/Aktorbeskrivelse}
 \input{Krav/UCbeskrivelse}
