Tilføjet bibtex til rapport

--- a/LaTeX/Projektdokumtation/Forside/Underskrift.tex
+++ b/LaTeX/Projektdokumtation/Forside/Underskrift.tex
@@ -15,7 +15,7 @@ Martin Carpentier | 201370292 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
 Jakob Kristensen | 201270250 & Dato\\[12ex]
 \makebox[2.5in]{\hrulefill} & \makebox[2.5in]{\hrulefill}\\
-Andreas Engelbrecht | x & Dato\\[12ex]
+Andreas Engelbrecht | 201370065 & Dato\\[12ex]
 
 \end{tabular}
 
