--- a/LaTeX/Projektrapport/Projektrapport.tex
+++ b/LaTeX/Projektrapport/Projektrapport.tex
@@ -14,8 +14,7 @@
 \include{Krav/Krav}
 \include{Projektbeskrivelse/Projektbeskrivelse}
 \include{Konklusion/Konklusion}
-\include{Referencer/Referencer}
 
-
+\include{bibtex}
 
 \end{document}
