Added text 4 UC 1 to 4 :poop: :speak_no_evil:

--- a/LaTeX/Projektrapport/Krav/UC/UC2.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC2.tex
@@ -1,1 +1,2 @@
 \subsubsection{Use Case 1 - Returner vare}
+Når en kunde ønsker at returnere en vare og få penge tilbage udføres denne Use Case. Ekspedienten indtaster varer til retur og trykker på knappen til den betalingsform der skal bruges til at returnere penge til kunden. Herefter bliver der sendt informationer om returneringen til CentralServer.
