--- a/LaTeX/Projektrapport/Krav/UC/UC4.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC4.tex
@@ -1,1 +1,2 @@
 \subsubsection{Use Case 4 - Rediger produkt}
+Redigering af produkter foregår på Administrationssystemet og udføres af en Superbruger. For at redigere et produkt vælger Superbruger et produkt i en produktkategori og trykker på knappen til redigering. Herefter åbner et nyt vindue med de nuværende informationer for produktet. Superbruger kan efterfølgende rette de relevante informationer. Når Superbruger er færdig med at redigere trykkes på knappen til at godkende og vinduet lukker igen. Der bliver sendt informationer om redigeringen til CentralServer og produktet opdateres med de nye informationer.
