--- a/LaTeX/Projektrapport/Krav/UC/UC1.tex
+++ b/LaTeX/Projektrapport/Krav/UC/UC1.tex
@@ -1,1 +1,2 @@
 \subsubsection{Use Case 1 - Gennemfør salg}
+Gennemfør salg foregår på Kasseapparatet. En ekspedient indtaster de varer en kunde ønsker at købe. Når alle de pågældende varer er indtastede giver kunden penge til ekspedienten, som indtaster det modtagne beløb og trykker på knappen der passer til betalingsformen. Kasseapparatet vil derefter registrere købet og sende informationer om købet til CentralServer.
