Add actor use case diagram :speak_no_evil:

--- a/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
+++ b/LaTeX/Projektrapport/Krav/Aktorbeskrivelse.tex
@@ -2,6 +2,13 @@
 
 I det følgende afsnit kan der læses om de aktører som er tilknyttet systemet. \\
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\textwidth]{Krav/Images/AktorUC}
+	\caption{Use Cases med aktører}
+	\label{fig:ActorUC}
+\end{figure}
+
 \begin{table}[H]
 	\label{EKS}
 	\begin{tabularx}{\textwidth}{|l|X|}
